<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fl_question_set"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_bg"
    tools:context=".QuestionSet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/linlay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/mToolBar"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/progressbar"
                        style="?android:progressBarStyleHorizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:indeterminate="false"
                        android:max="5"
                        android:progress="1" />

                    <TextView
                        android:id="@+id/pb_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="1/5" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/default_text" />

                <ImageView
                    android:id="@+id/img_vehicle_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/vehicle_logo"
                    android:scaleType="fitXY"
                    tools:srcCompat="@drawable/audi" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/tv_border"
                    android:id="@+id/tv_option1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/a"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="@string/lorem_ipsum" />

                    <TextView
                        android:id="@+id/indicator1"
                        android:layout_width="5dp"
                        android:layout_height="18dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/dot_indicator_red"
                        android:padding="10dp"
                        android:visibility="gone" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/tv_option2"
                    android:background="@drawable/tv_border"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:id="@+id/b"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        tools:text="@string/lorem_ipsum" />

                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="18dp"
                        android:id="@+id/indicator2"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/dot_indicator_red"
                        android:padding="10dp"
                        android:visibility="gone" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/tv_border"
                    android:id="@+id/tv_option3"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:id="@+id/c"
                        android:textSize="20sp"
                        tools:text="@string/lorem_ipsum" />

                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="18dp"
                        android:layout_marginEnd="5dp"
                        android:id="@+id/indicator3"
                        android:background="@drawable/dot_indicator_red"
                        android:padding="10dp"
                        android:visibility="gone" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/tv_option4"
                    android:background="@drawable/tv_border"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/d"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="20sp"
                        tools:text="@string/lorem_ipsum" />

                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="18dp"
                        android:layout_marginEnd="5dp"
                        android:id="@+id/indicator4"
                        android:background="@drawable/dot_indicator_red"
                        android:padding="10dp"
                        android:visibility="gone" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/submit"
                    tools:text="@string/submit" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>